# LIVI

./: .gitmodules  README.md  biome.json  electron-builder.yml  jest.setup.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.vitest.json  tsconfig.web.json  vite.config.ts  vitest.config.ts  vitest.main.setup.ts
.github/actions/badges/: action.yml
.github/workflows/: build.yml  typecheck.yml
.husky/: pre-commit
assets/displays/: README.md  VOLVO_RTI_SHARP_400_234.edid
assets/gstreamer/linux-x64/lib/: libasyncns.so.0.3.1  libblkid.so.1.1.0  libmount.so.1.1.0  libmpg123.so.0.49.4
assets/gstreamer/macos-arm64/lib/: GStreamer  libffi.7.dylib  libglib-2.0.0.dylib  libgmodule-2.0.0.dylib  libgobject-2.0.0.dylib  libgraphene-1.0.0.dylib  libgstapp-1.0.0.dylib  libgstaudio-1.0.0.dylib  libgstbase-1.0.0.dylib  libgstcodecparsers-1.0.0.dylib  libgstcontroller-1.0.0.dylib  libgstfft-1.0.0.dylib  libgstgl-1.0.0.dylib  libgstpbutils-1.0.0.dylib  libgsttag-1.0.0.dylib  libgstvideo-1.0.0.dylib  libgstvulkan-1.0.0.dylib  libintl.8.dylib  libjpeg.8.3.2.dylib  liborc-0.4.0.dylib  libpcre2-8.0.dylib  libpng16.16.56.0.dylib  libz.1.dylib
assets/gstreamer/macos-arm64/lib/gstreamer-1.0/: libgstapp.dylib  libgstaudioconvert.dylib  libgstaudiofx.dylib  libgstaudiomixer.dylib  libgstaudioparsers.dylib  libgstaudiorate.dylib  libgstaudioresample.dylib  libgstaudiotestsrc.dylib  libgstautodetect.dylib  libgstcoreelements.dylib  libgstequalizer.dylib  libgstinterleave.dylib  libgstlevel.dylib  libgstosxaudio.dylib  libgstrawparse.dylib  libgstvolume.dylib
assets/gstreamer/macos-arm64/libexec/gstreamer-1.0/: gst-plugin-scanner
native/livi-compositor/: livi-compositor.c
native/rtl-sdr-dab/: .gitattributes  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  index.d.ts  index.js  package.json  test-scan.js  test.js
native/rtl-sdr-dab/src/: addon.cpp  dab_controller.cpp  dab_controller.h  lib.rs
native/rtl-sdr-fm/: .gitattributes  Cargo.toml  build.rs  index.d.ts  index.js  package.json  test-rds.js
native/rtl-sdr-fm/.github/workflows/: CI.yml
native/rtl-sdr-fm/src/: lib.rs
native/rtl-sdr-old/: binding.gyp  index.js  package-lock.json  package.json  test-audio.js  test-scan.js  test.js
native/rtl-sdr-old/src/: rtl-sdr.cc
scripts/install/pi/: install.sh  setup-hdmi-pr-display.sh
src/main/: index.ts
src/main/__tests__/: constants.test.ts  index.test.ts  smoke-main-modules.test.ts  utils.test.ts
src/main/app/: compositorBootstrap.ts
src/main/app/__tests__/: compositorBootstrap.test.ts  errorHandler.test.ts  gpu.test.ts  init.test.ts  lifecycle.test.ts
src/main/config/: validateConfig.ts
src/main/config/__tests__/: loadConfig.test.ts  validateConfig.test.ts
src/main/helpers/__tests__/: vendorSessionInfo.test.ts
src/main/ipc/: app.ts  index.ts  rtlsdr.ts  utils.ts
src/main/ipc/__tests__/: app.test.ts  index.test.ts  register.test.ts  rtlsdr.test.ts  settings.test.ts  update.test.ts  utils.test.ts
src/main/ipc/update/__tests__/: downloader.test.ts  install.dmg.test.ts  install.linux.test.ts  (+2 more)
src/main/protocol/__tests__/: appProtocol.test.ts
src/main/services/: Socket.ts
src/main/services/__tests__/: Socket.test.ts
src/main/services/audio/: AudioOutput.ts
src/main/services/rtlsdr/: DabRadio.ts  FmRadio.ts  RadioService.ts  RtlSdrDetection.ts  backendEvent.ts  dabImageCache.ts  dabStationCache.ts
src/main/services/usb/: udevRule.ts
src/main/services/video/: GstVideo.ts
src/main/shared/types/: Config.ts
src/main/window/: createWindow.ts  secondaryWindows.ts
src/main/window/__tests__/: broadcast.test.ts  createWindow.test.ts  secondaryWindows.test.ts  utils.test.ts
src/preload/: index.ts
src/preload/__tests__/: index.test.ts
src/renderer/src/: App.tsx  constants.ts  env.d.ts
src/renderer/src/__tests__/: App.test.tsx
src/renderer/src/locales/: de.json  en.json  fr.json  ua.json
src/renderer/src/routes/: appRoutes.tsx  types.ts
src/renderer/src/store/: store.ts
src/renderer/src/utils/: rtlSdrDetection.ts
(+99 files in other folders)
